manifests/app-prod/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: k001-prod-nginx-dep
  name: k001-prod-nginx-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k001-prod-nginx-dep
  strategy: {}
  template:
    metadata:
      labels:
        app: k001-prod-nginx-dep
    spec:
      containers:
      - image: nginx
        name: nginx
        volumeMounts:
          - mountPath: /usr/share/nginx/html
            name: nginx-data
      volumes:
        - name: nginx-data
          persistentVolumeClaim:
            claimName: k001-prod-nginx-pvc
      resources: {}
status: {}
