manifests/app-prod/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: k001-prod-nginx-svc
spec:
  selector:
    app: k001-prod-nginx-dep

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
