manifests/app-prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k001-prod-nginx-ing
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: prod.lab.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k001-prod-nginx-svc
            port:
              number: 80
